--- a/src/app.yml
+++ b/src/app.yml
@@ -3,10 +3,9 @@ layout: layout.html
 routes:
   GET /: index.html
   GET /auth/github/callback: login.html
-  GET /chat: chat.html
 
 pages:
-  chat.html:
-    orgs: GET user/orgs?access_token={{params.cookies.token}}
+  index.html:
+    orgs: GET user/orgs?access_token={{cookies.token}}
 
 
